adding applications view

--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -8,7 +8,12 @@
 </head>
 
 <body>
-	<div id="header" class="header">User Management</div>
+	<div id="header" class="header">
+		<span style="font-size: 20pt;float:left;">WARP</span>		
+		<div style="float:right; padding-top: 30">
+			<span style="font-size: 20pt; color: blue;">User Management</span>
+		</div>			
+	</div>
 			
 	<div id="main" class="content">
 		New item: <input
