starting the move to angular

--- a/services/src/main/webapp/applications.html
+++ b/services/src/main/webapp/applications.html
@@ -3,7 +3,7 @@
  <!-- <meta http-equiv="Refresh" content="0; URL=index.jsf">  -->
  <link rel="stylesheet" type="text/css" href="resources/css/screen.css" />
  <script type="text/javascript" src="knockout-3.2.0.js"> </script>
- <script type="text/javascript" src="rest.js"> </script>	
+ <script type="text/javascript" src="js/rest.js"> </script>	
  <title>Applications</title>
 </head>
 
