change from member to user add users and userDetail partials add menu to header

--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -18,6 +18,11 @@
 		<span style="font-size: 20pt;float:left;">WARP</span>		
 		<div style="float:right; padding-top: 30">
 			<span style="font-size: 20pt; color: blue;">Application Management</span>
+		</div>
+		<div id="menu" style="position: fixed; top: 55px; left: 10px; ">
+		
+			<a href ="#/apps" class="menuItem">Applications</a>
+			<a href ="#/users" class="menuItem">Users</a>
 		</div>			
 	</div>
   <div ng-view></div>
