change from href to ng-href

--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -21,8 +21,8 @@
 		</div>
 		<div id="menu" style="position: fixed; top: 55px; left: 10px; ">
 		
-			<a href ="#/apps" class="menuItem">Applications</a>
-			<a href ="#/users" class="menuItem">Users</a>
+			<a ng-href ="#/apps" class="menuItem">Applications</a>
+			<a ng-href ="#/users" class="menuItem">Users</a>
 		</div>			
 	</div>
   <div ng-view></div>
