--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -7,9 +7,10 @@
   <script type="text/javascript" src="angular/angular-route.js"></script>
  <script type="text/javascript" src="angular/angular-resource.js"></script>
  <script type="text/javascript" src="js/rest.js"> </script>
- <script type="text/javascript" src="js/app.js"></script>
-<!--  <script type="text/javascript" src="js/controllers.js"></script> -->
-<!--  <script type="text/javascript" src="js/services.js"></script> -->
+ <script type="text/javascript" src="js/services.js"></script>
+ <script type="text/javascript" src="js/controllers.js"></script> 
+ <script type="text/javascript" src="js/app.js"></script> 
+
  
  <title>Applications</title>
 </head>
