--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -8,7 +8,8 @@
  <script type="text/javascript" src="angular/angular-resource.js"></script>
  <script type="text/javascript" src="js/rest.js"> </script>
  <script type="text/javascript" src="js/services.js"></script>
- <script type="text/javascript" src="js/controllers.js"></script> 
+ <script type="text/javascript" src="js/apps-controllers.js"></script> 
+ <script type="text/javascript" src="js/users-controllers.js"></script>
  <script type="text/javascript" src="js/app.js"></script> 
 
  
