--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -2,16 +2,22 @@
 <html lang="en" x-ng-app="appMgr">
 <head>
  <link rel="stylesheet" type="text/css" href="resources/css/screen.css" />
+ <link rel="stylesheet" type="text/css" href="resources/css/ngDialog.css" />
+ <link rel="stylesheet" type="text/css" href="resources/css/ngDialog-theme-plain.css" />
+ <link rel="stylesheet" type="text/css" href="resources/css/ngDialog-theme-default.css" />
  	
  <script type="text/javascript" src="angular/angular.js"></script>
  <script type="text/javascript" src="angular/angular-route.js"></script>
  <script type="text/javascript" src="angular/angular-resource.js"></script>
+ <script type="text/javascript" src="angular/ngDialog.js"></script>
  <script type="text/javascript" src="js/rest.js"> </script>
+ <script type="text/javascript" src="js/presentation.js"></script>
  <script type="text/javascript" src="js/services.js"></script>
  <script type="text/javascript" src="js/apps-controllers.js"></script> 
  <script type="text/javascript" src="js/users-controllers.js"></script>
  <script type="text/javascript" src="js/header-controller.js"></script>
- <script type="text/javascript" src="js/app.js"></script> 
+ <script type="text/javascript" src="js/app.js"></script>
+  
 
  
  <title>Applications</title>
@@ -25,6 +31,7 @@
 		<div style="position:fixed; right:15px; border: red; border-bottom-style: solid;">
 			<span style="font-size: 20pt; color: blue;">Application Management</span>
 		</div>
+		
 		<div style="position:fixed; right:15px; top:40px;">
 			<span style="font-size: 7pt; color: green;">IP Address : </span>
 			<span style="font-size: 7pt; color: blue;" x-ng-bind="ipAddress"></span>
