authentication frameword added

--- a/services/src/main/webapp/index.html
+++ b/services/src/main/webapp/index.html
@@ -16,6 +16,7 @@
  <script type="text/javascript" src="js/apps-controllers.js"></script> 
  <script type="text/javascript" src="js/users-controllers.js"></script>
  <script type="text/javascript" src="js/header-controller.js"></script>
+ <script type="text/javascript" src="js/login-controllers.js"></script>
  <script type="text/javascript" src="js/app.js"></script>
   
 
@@ -47,3 +48,4 @@
   
 </body>
 </html>
+
